[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Eric Jolibois <em.jolibois@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
