[package]
name = "mongobenchmark"
version = "0.1.0"
authors = ["Miguel Rivero <charrinton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.19"
mongodb = { version = "2.2.2" }
tokio = "1.19.2"
serde = "1.0.137"
rand = "0.8.5"
futures = "0.3.21"

[profile.release]
lto = true
